# gemacast

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  android-aarch64-toolchain.cmake  android-armv7-toolchain.cmake  android-i686-toolchain.cmake  android-x86_64-toolchain.cmake  dist-workspace.toml  release-please-config.json  release-plz.toml
.cargo/: config.toml
.github/workflows/: ci.yml  prepare-release.yml  release-android.yml  release-pc-daemon.yml  release-plz.yml  release.yml  test-installers.yml
gemacast-core/: ABOUT.md  CHANGELOG.md  Cargo.toml
gemacast-core/src/: error.rs  lib.rs  testing.rs  types.rs
gemacast-core/src/adapters/: error_notifier.rs  mod.rs  process_lister.rs  transport.rs
gemacast-core/src/adapters/capture/: cpal_loopback.rs  mod.rs  wasapi_common.rs  wasapi_desktop.rs  wasapi_loopback.rs
gemacast-core/src/audio/: mod.rs  resampler.rs
gemacast-core/src/control/: handler.rs  http.rs  http_client.rs  messages.rs  mod.rs  types.rs  udp.rs  ws.rs  ws_client.rs
gemacast-core/src/discovery/: broadcaster.rs  listener.rs  mdns.rs  mod.rs
gemacast-core/src/domain/: error.rs  mod.rs  types.rs
gemacast-core/src/jitter/: buffer.rs  controller.rs  manager.rs  mod.rs  types.rs
gemacast-core/src/network/: discovery.rs  interface.rs  mod.rs  ports.rs  receiver.rs  sender.rs
gemacast-core/src/network/adb/: framer.rs  mod.rs  reverse.rs  server.rs  spigots.rs
gemacast-core/src/ports/: capture.rs  error_notifier.rs  mod.rs  process_lister.rs  transport.rs
gemacast-core/src/receiver/: heartbeat.rs  listener.rs  mod.rs  stream.rs  transport.rs
gemacast-core/src/sender/: broadcast.rs  capture.rs  encode.rs  mod.rs
gemacast-core/src/stream/: mod.rs  transport.rs
gemacast-core/src/stream/receiver/: heartbeat.rs  listener.rs  mod.rs  packet.rs  stream.rs  transport.rs
gemacast-core/src/stream/sender/: broadcast.rs  capture_pool.rs  encode.rs  engine.rs  mod.rs
gemacast-core/src/stream/sender/capture/: cpal_loopback.rs  mod.rs  wasapi_common.rs  wasapi_desktop.rs  wasapi_loopback.rs
gemacast-core/src/updater/: mod.rs
gemacast-mobile/: .prettierignore  ABOUT.md  bunfig.toml  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
gemacast-mobile/src/: App.ts  App.tsx  error.ts  index.css  main.ts  styles.css  types.ts
gemacast-mobile/src-tauri/: Cargo.toml  tauri.conf.json
gemacast-mobile/src-tauri/capabilities/: default.json
gemacast-mobile/src-tauri/icons/: icon.icns
gemacast-mobile/src-tauri/src/: adapters.rs  discovery.rs  lib.rs  main.rs  service.rs  state.rs  testing.rs  traits.rs
gemacast-mobile/src-tauri/src/adapters/: frontend_notifier.rs  network_info.rs  platform_service.rs  sender_control.rs  session_manager.rs
gemacast-mobile/src-tauri/src/commands/: discovery.rs  mod.rs  playback.rs  volume.rs
gemacast-mobile/src-tauri/src/domains/: mod.rs
gemacast-mobile/src-tauri/src/domains/audio/: commands.rs  mod.rs  playback.rs  service.rs
gemacast-mobile/src-tauri/src/domains/discovery/: adb_session.rs  commands.rs  dispatch.rs  heartbeat.rs  listener.rs  mod.rs  native.rs  probe.rs  service.rs
gemacast-mobile/src-tauri/src/domains/ipc/: server.rs
gemacast-mobile/src-tauri/src/domains/updater/: commands.rs  install.rs  mod.rs
gemacast-mobile/src-tauri/src/traits/: frontend_notifier.rs  network_info.rs  platform_service.rs  sender_control.rs  session_manager.rs  types.rs
gemacast-mobile/src/__tests__/: dom-setup.ts  setup.ts
gemacast-mobile/src/components/device/: DeviceInfo.test.tsx  DeviceInfo.tsx  StatusChip.test.tsx  StatusChip.tsx
gemacast-mobile/src/components/feedback/: Toast.test.tsx  Toast.tsx  ToastContainer.test.tsx  ToastContainer.tsx
gemacast-mobile/src/components/latency/: LatencyStats.test.tsx  LatencyStats.tsx
gemacast-mobile/src/core/: AudioService.spec.ts  AudioService.ts  ConnectionService.spec.ts  ConnectionService.ts  DiscoveryService.spec.ts  DiscoveryService.ts  LatencyTracker.spec.ts  LatencyTracker.ts  StateHandler.spec.ts  StateHandler.ts  constants.ts  error.test.ts  help-content.ts  latency-tracker.test.ts  latency-tracker.ts  persistence.test.ts  persistence.ts  presets.test.ts  presets.ts  tauri-bridge.test.ts  tauri-bridge.ts  testHelpers.ts  types.ts  validation.test.ts  validation.ts
gemacast-mobile/src/dom/: device.ts  error.ts  latency.ts  listeners.ts  manual-connect.ts  navigation.ts  senders.ts  settings.ts  toast.ts  utils.ts  volume.ts
gemacast-mobile/src/hooks/: use-audio.test.ts  use-audio.ts  use-connection.test.ts  use-connection.ts  use-custom-preset-editor.test.ts  use-custom-preset-editor.ts  use-discovery.test.ts  use-discovery.ts  use-drawer.ts  use-manual-connect.ts  use-network-monitor.ts  use-settings.ts  use-tauri-events.ts  use-updater.ts  use-wake-lock.ts
gemacast-mobile/src/stores/: app-store.test.ts  app-store.ts  toast-store.test.ts  toast-store.ts  update-store.ts
gemacast-mobile/src/styles/: banner.css  buttons.css  device.css  error.css  keyframes.css  latency.css  layout.css  modals.css  process-select.css  senders.css  settings.css  source-select.css  toast.css  volume.css
gemacast-pc/: .gitignore  ABOUT.md  CHANGELOG.md  Cargo.toml  build.rs
gemacast-pc/src/: adapters.rs  app.rs  autostart.rs  background.rs  config.rs  crash_log.rs  events.rs  main.rs  network.rs  state.rs  tasks.rs  testing.rs  traits.rs  tray.rs  updater.rs  volume.rs
gemacast-pc/src/adapters/: audio.rs  device.rs  tray.rs
gemacast-pc/src/domains/: mod.rs
gemacast-pc/src/domains/audio/: engine.rs  mod.rs  stream_manager.rs
gemacast-pc/src/domains/discovery/: dispatch.rs  mod.rs  udp_listener.rs  watchdog.rs
gemacast-pc/src/tasks/: audio_engine.rs  command_handler.rs  control_dispatcher.rs  device_watchdog.rs  udp_listener.rs  updater.rs
gemacast-pc/src/traits/: audio_controller.rs  device_notifier.rs  device_registry.rs  tray_notifier.rs
gemacast-pc/wix/: main.wxs
linux/: gemacast-pc.desktop
macos/: Info.plist
wix/assets/: LICENSE.rtf
wix/msi/: CustomUI.wxs  Product.wxs  msi.wixproj
(+53 files in other folders)
