[package]
name = "gemacast-core"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = { version = "0.17.3", features = ["asio"] }
local-ip-address = "0.6.10"
opus = "0.3.1"
ringbuf = "0.4.8"
rubato = "1.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
