[package]
name = "gemacast-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
cpal = { version = "0.17.3", features = ["asio"] }
netdev = "0.41.0"
opus = "0.3.1"
ringbuf = "0.4.8"
rubato = "1.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socket2 = { version = "0.5", features = ["all"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "android")'.dependencies]
oboe = { version = "0.6.1", features = ["shared-stdcxx"] }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_System_Threading",
  "Win32_Media_KernelStreaming",
  "Win32_Security",
  "implement"
]
