[package]
name = "gemacast-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
## Enables `Box<dyn Trait>` wrappers for port traits, allowing runtime-loaded
## backends (e.g., plugin systems). Not needed for normal builds — all
## production paths use static dispatch via generics.
dynamic-dispatch = []

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
tokio-tungstenite = "0.29.0"
mdns-sd = "0.19.1"
netdev = "0.43.0"
opus = "0.3.1"
ringbuf = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socket2 = { version = "0.6.3", features = ["all"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
whoami = "2.1.2"
futures = "0.3.32"
tracing = "0.1.44"
url = "2.5.8"
rubato = "3.0.0"
audioadapter-buffers = "3.0.0"
cpal = "0.17.3"

[target.'cfg(target_os = "android")'.dependencies]
oboe = { version = "0.6.1", features = ["shared-stdcxx"] }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_System_Threading",
  "Win32_Media_KernelStreaming",
  "Win32_Security",
  "implement",
]


