[package]
name = "gemacast-pc"
version = "0.1.0"
edition = "2024"

[dependencies]
gemacast-core = { path = "../gemacast-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "net", "signal"] }
tao = "0.34.6"
tray-icon = "0.21.3"
rfd = "0.17.2"
whoami = "2.1.1"
thread-priority = "3.0.0"
async-trait = "0.1"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.23"
image = "0.25.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com"] }
