[package]
name = "gemacast-pc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.wix]
upgrade-guid = "6D490F3C-E477-4FC8-ABF4-71D7CFEA7B53"
path-guid = "332414CF-4B78-48E4-B364-C698596B71A3"
license = false
eula = false

[package.metadata.dist]
include = ["bin/"]

[dependencies]
gemacast-core = { path = "../gemacast-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "net", "signal"] }
tao = "0.34.6"
tray-icon = "0.21.3"
rfd = "0.17.2"
whoami = "2.1.1"
thread-priority = "3.0.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3.23"
image = "0.25.10"

