[package]
name = "gemacast-pc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.dist]
# Bundle ADB binaries (downloaded by build.rs) into release archives
# Files are at the crate root so they appear beside gemacast-pc(.exe) in the archive
# build.rs creates placeholder stubs for cross-platform filenames so cargo-dist doesn't fail
include = ["adb", "adb.exe", "AdbWinApi.dll", "AdbWinUsbApi.dll"]

[build-dependencies]
embed-manifest = "1"

[dependencies]
gemacast-core = { path = "../gemacast-core", version = "0.1.0" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "net", "signal"] }
tao = "0.34.6"
tray-icon = "0.21.3"
rfd = "0.17.2"
whoami = "2.1.1"
thread-priority = "3.0.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3.23"
image = "0.25.10"
fs2 = "0.4"

# ── Linux .deb packaging (cargo-deb) ─────────────────────────────────────────
[package.metadata.deb]
maintainer = "Echa Apriliyanto <echa.apriliyanto.dev@gmail.com>"
section = "sound"
depends = "$auto"
assets = [
    ["target/release/gemacast-pc", "usr/bin/", "755"],
    ["target/release/adb", "usr/lib/gemacast/adb", "755"],
    ["linux/gemacast-pc.desktop", "usr/share/applications/", "644"],
    ["linux/gemacast-pc.png", "usr/share/icons/hicolor/256x256/apps/gemacast-pc.png", "644"],
]

# ── Linux .rpm packaging (cargo-generate-rpm) ────────────────────────────────
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/gemacast-pc", dest = "/usr/bin/gemacast-pc", mode = "0755" },
    { source = "target/release/adb", dest = "/usr/lib/gemacast/adb", mode = "0755" },
    { source = "linux/gemacast-pc.desktop", dest = "/usr/share/applications/gemacast-pc.desktop", mode = "0644" },
    { source = "linux/gemacast-pc.png", dest = "/usr/share/icons/hicolor/256x256/apps/gemacast-pc.png", mode = "0644" },
]
